@@ -2955,13 +2955,13 @@ PKL_PHASE_BEGIN_HANDLER (pkl_gen_ps_type_integral)
     }
   else if (PKL_GEN_IN_CTX_P (PKL_GEN_CTX_IN_PRINTER))
     {
-                                                  /* VAL DEPTH */
-      RAS_MACRO_INTEGRAL_PRINTER (PKL_PASS_NODE); /* _ */
+                             /* VAL DEPTH */
+      RAS_MACRO_ANY_PRINTER; /* _ */
     }
   else if (PKL_GEN_IN_CTX_P (PKL_GEN_CTX_IN_FORMATER))
     {
-                                                  /* VAL DEPTH */
-      RAS_MACRO_INTEGRAL_FORMATER (PKL_PASS_NODE); /* _ */
+                              /* VAL DEPTH */
+      RAS_MACRO_ANY_FORMATER; /* _ */
     }
   else if (PKL_GEN_IN_CTX_P (PKL_GEN_CTX_IN_TYPIFIER))
     {
